--- a/.github/workflows/daily_training.yml
+++ b/.github/workflows/daily_training.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r ML/requirements.txt
         pip install python-dotenv pymongo mlflow pymongo[srv] gitpython
 
     - name: Create MLflow directory
