--- a/.github/workflows/daily_training.yml
+++ b/.github/workflows/daily_training.yml
@@ -43,25 +43,25 @@ jobs:
       env:
         MONGO_URI: ${{ secrets.MONGO_URI }}
       run: |
-        if [ -f "best_model.pkl" ]; then
-          rm -f best_model.pkl
+        if [ -f "ML/best_model.pkl" ]; then
+          rm -f ML/best_model.pkl
           echo "Ancien modèle supprimé"
         fi
         
         python ML/train_model.py
         
-        if [ ! -f "best_model.pkl" ]; then
+        if [ ! -f "ML/best_model.pkl" ]; then
           echo "ERREUR: best_model.pkl manquant"
           exit 1
         fi
         
-        python -c "import joblib; print('=== METADONNEES ===', joblib.load('best_model.pkl')['metadata'])"
+        python -c "import joblib; print('=== METADONNEES ===', joblib.load('ML/best_model.pkl')['metadata'])"
 
     - name: Push to GitHub
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        git add best_model.pkl model_backups/*
+        git add ML/best_model.pkl ML/model_backups/*
         git commit -m "Update model ${{ github.run_id }}"
         git push
 
