--- a/.github/workflows/daily_training.yml
+++ b/.github/workflows/daily_training.yml
@@ -12,7 +12,7 @@ jobs:
   train-model:
     runs-on: ubuntu-latest
     env:
-      MLFLOW_TRACKING_URI: http://127.0.0.1:5000
+      MLFLOW_TRACKING_URI: http://34.76.98.147/
       DB_NAME: reservation
       COLLECTION_NAME: transitaires
       MODEL_VERSION: ${{ github.run_id }}
