--- a/.github/workflows/daily_training.yml
+++ b/.github/workflows/daily_training.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       MLFLOW_TRACKING_URI: http://34.76.98.147/
       DB_NAME: reservation
-      COLLECTION_NAME: transitaires
+      COLLECTION_NAME: transitairesTest
       MODEL_VERSION: ${{ github.run_id }}
 
     steps:
